--- a/www/maps/js/leaflet.css
+++ b/www/maps/js/leaflet.css
@@ -299,20 +299,17 @@
 /* layers control */
 
 .leaflet-control-layers {
-	box-shadow: 0 1px 5px rgba(0,0,0,0.4);
-	background: #fff;
-	border-radius: 5px;
 	}
 .leaflet-control-layers-toggle {
 	background-image: url(images/layers.png);
 	width: 36px;
 	height: 36px;
-	border: none;
+	border: 0px solid black;
 	}
 .leaflet-retina .leaflet-control-layers-toggle {
 	background-image: url(images/layers.png);
 	background-size: 36px 36px;
-	border: none;
+	border: 0px solid black;
 	}
 .leaflet-touch .leaflet-control-layers-toggle {
 	width: 44px;
