--- a/www/css/main.css
+++ b/www/css/main.css
@@ -65,14 +65,115 @@
 /*//////////////////////////////////////////////////////////////////////////////////////////////////*/
 /*//////////////////////////////////////////////////////////////////////////////////////////////////*/
 
-
-
+/*//START AUDIO/////////////////////////////////////////////////////////////////////////////////////*/
+/*//////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*//////////////////////////////////////////////////////////////////////////////////////////////////*/
 #smgroup_audio_player,#smgroup_audio_player *,#smgroup_audio_player span{
 	direction:ltr !important;
 }
 #play2 {
     display:none;
 }
+input[type=range] {
+  -webkit-appearance: none;
+  width: 100%;
+  margin: 11.5px 0;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  background: #c8c8c8;
+  border-radius: 0px;
+  border: 0px solid rgba(0, 0, 0, 0);
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px rgba(255, 0, 0, 0.49), 0px 0px 0px rgba(255, 26, 26, 0.49);
+  border: 0px solid rgba(148, 30, 0, 0);
+  height: 25px;
+  width: 34px;
+  border-radius: 5px;
+  background: rgba(3, 156, 132, 0.95);
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -11.5px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #c8c8c8;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  background: #c8c8c8;
+  border-radius: 0px;
+  border: 0px solid rgba(0, 0, 0, 0);
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 0px 0px rgba(255, 0, 0, 0.49), 0px 0px 0px rgba(255, 26, 26, 0.49);
+  border: 0px solid rgba(148, 30, 0, 0);
+  height: 25px;
+  width: 34px;
+  border-radius: 5px;
+  background: rgba(3, 156, 132, 0.95);
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #c8c8c8;
+  border: 0px solid rgba(0, 0, 0, 0);
+  border-radius: 0px;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+}
+input[type=range]::-ms-fill-upper {
+  background: #c8c8c8;
+  border: 0px solid rgba(0, 0, 0, 0);
+  border-radius: 0px;
+  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 0px 0px 0px rgba(255, 0, 0, 0.49), 0px 0px 0px rgba(255, 26, 26, 0.49);
+  border: 0px solid rgba(148, 30, 0, 0);
+  height: 25px;
+  width: 34px;
+  border-radius: 5px;
+  background: rgba(3, 156, 132, 0.95);
+  cursor: pointer;
+  height: 2px;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #c8c8c8;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #c8c8c8;
+}
+/*//END AUDIO//////////////////////////////////////////////////////////////////////////////////////*/
+/*//////////////////////////////////////////////////////////////////////////////////////////////////*/
+/*//////////////////////////////////////////////////////////////////////////////////////////////////*/
+
+
+
+
+
+
+
+
+
+
+
+
 #controls_size {
   background: none repeat scroll 0 0 #e91804;
   bottom: 31px;
