--- a/www/css/main.css
+++ b/www/css/main.css
@@ -176,7 +176,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 #controls_size {
   background: none repeat scroll 0 0 #e91804;
-  bottom: 31px;
+  bottom: 2px;
   float: left;
   left: 0px;
   margin: 0 5px 5px -1px;
@@ -212,15 +212,14 @@ input[type=range]:focus::-ms-fill-upper {
 #controls_size #large     {  font-size:23px  !important;padding: 2px 8px 17px 6px;}
 /*/////////////////////NEW STYLE///////////////////////*/
 #controls_over{position:relative;top:0;left:0;width:100%;height:100%;z-index: 900;}
-#controls_size {bottom: 31px;}
 #controls_size #small,#controls_size #large{display:none;}
-#controls_size #large,#controls_size #medium,#controls_size #small{color:#ffffff !important;border-radius: 0 11px 11px 0 !important;background-color:#fb331f;padding-left:4px;z-index: 1002 !important;position:absolute;bottom: 0;}
+#controls_size #large,#controls_size #medium,#controls_size #small{color:#ffffff !important;border-radius: 0 11px 11px 0 !important;background-color:#027664;padding-left:4px;z-index: 1002 !important;position:absolute;bottom: 0;}
 #controls_size.opened #large,#controls_size.opened #medium,#controls_size.opened #small{display:block !important;}
-#controls_size.opened{border-radius: 0 11px 11px 0 !important;background-color:#fb331f;}
+#controls_size.opened{border-radius: 0 11px 11px 0 !important;background-color:#027664;}
 #controls_size.opened #small{bottom: 76px;border-radius:0 11px 0 0 !important;padding-left: 3px;}
 #controls_size.opened #medium{bottom: 39px;border-radius:0 !important;padding-left: 3px;}
 #controls_size.opened #large{bottom: 0px;border-radius:0 0 11px 0 !important;}
-#controls_size.opened #large.selected,#controls_size.opened #medium.selected,#controls_size.opened #small.selected{background-color:#d11300 !important;}
+#controls_size.opened #large.selected,#controls_size.opened #medium.selected,#controls_size.opened #small.selected{background-color:#3dc5b0 !important;}
 
 
 
