before amir hosin

--- a/www/maps/js/style.css
+++ b/www/maps/js/style.css
@@ -13,8 +13,9 @@ html, body, #map {
 }
 .leaflet-popup-content {
   direction: rtl;
-  font-family:tahoma;
-  font-size:13px;
+  font-family: tahoma;
+  font-size: 13px;
+  text-align: center;
 }
 .leaflet-control-attribution.leaflet-control a{display:none;}
 #findbox {
