--- a/www/css/main.css
+++ b/www/css/main.css
@@ -1,4 +1,8 @@
 /*786*/
+html{
+    background-color: #d7d7d7;
+}
+
 /*//START SLIDER////////////////////////////////////////////////////////////////////////////////////*/
 /*//////////////////////////////////////////////////////////////////////////////////////////////////*/
 /*//////////////////////////////////////////////////////////////////////////////////////////////////*/
@@ -222,6 +226,392 @@ input[type=range]:focus::-ms-fill-upper {
 #controls_size.opened #large{bottom: 0px;border-radius:0 0 11px 0 !important;}
 #controls_size.opened #large.selected,#controls_size.opened #medium.selected,#controls_size.opened #small.selected{background-color:#3dc5b0 !important;}
 
+
+
+.doa_text{line-height:200%;text-align:justify;direction:rtl;}
+.doa_titr{font-weight:bold;font-size:18px;}
+.arabic{font-family:Droid_Arabic_Kufi;padding:12px 0;}
+.persian{padding:12px 0;}
+
+#header{
+	position:fixed;
+	top:0;
+	left:0;
+	height:80px;
+	width:100%;
+	background:#4a4a4a url("../images/top-bg.png") repeat scroll 0 0 / 85px auto;
+	z-index: 786;
+}
+#back-btn{
+    background: transparent url("../images/back-btn.png") no-repeat scroll right 0 / auto 28px;
+    height: 29px;
+    width: 61px;
+    position: absolute;
+    left: 40px;
+    margin: auto;
+    cursor: pointer;
+    bottom: 0;
+    top: -2px;
+}
+#header-text {
+  position: absolute;
+  right: 93px;
+  top: -8px;
+}
+#header-text-1th{
+  background: transparent url("../images/header-text-1th.png") no-repeat scroll right 0 / auto 86px;
+  height: 86px;
+  width: 19px;
+  float:right;
+}
+#header-text-2th {
+ color: white;
+    float: right;
+    font-size: 21px;
+    right: 40px;
+    font-weight: bold;
+    height: 80px;
+    line-height:80px;
+    padding: 0 8px;
+    width: auto;
+}
+#header-text-3th{
+  background: transparent url("../images/header-text-3th.png") no-repeat scroll right 0 / auto 86px;
+  height: 86px;
+  width: 42px;
+  float:right;
+}
+#footer{
+	position:fixed;
+	bottom:0;
+	left:0;
+	height:74px;
+	width:100%;
+	background-image: url("../images/footer-bg-center.png"), url("../images/footer-bg.png");
+	background-position:center top, left top;
+	background-size:auto 74px,auto 74px;
+	background-repeat:no-repeat,repeat-x;
+	z-index: 786;
+}
+#warper #container {
+  margin-top: 105px;
+  /*padding:0 20px;*/
+}
+/*
+#warper #container #main{
+  width:100%;
+  box-sizing: border-box;
+  padding: 0 16px;
+}
+*/
+#warper #container #main .simplebar-content{
+	padding:0 5px 0px 5px;
+}
+
+#warper #container #main {
+  box-sizing: border-box;
+  overflow-x: hidden;
+  padding: 0 16px;
+  width: 100%;
+}
+
+
+
+/************amr***************/
+.dw_bottun {
+    height: 50px;
+    position: relative;
+    top: 15px;
+    margin: 0 auto;
+    display: inline-block;
+    text-align: center;
+    background-color: transparent;
+    border: 0;
+    color: white;
+    font-size: 16px;
+    width: 90px;
+    font-weight: 100;
+}
+#controls_size.opened {
+    border-radius:0 !important;
+    background-color: #027664;
+}
+
+div#footer-bg {
+    text-align: center;
+}
+button.dw_bottun.audio {
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+}
+#controls_size.opened #large, #controls_size.opened #medium, #controls_size.opened #small {
+text-align: center;
+    display: inline-block !important;
+    width: 100px;
+    float: none;
+    line-height: 47px;
+    position: relative;
+    top: 0;
+    height: 47px;
+    padding: 0;
+}
+#controls_size.opened #large.selected, #controls_size.opened #medium.selected, #controls_size.opened #small.selected {
+    background: none !important;
+	font-weight:bold;
+}
+#controls_size.opened {
+    bottom: 34px;
+    background-color: #38ab99;
+    height: 40px;
+}
+div#controls_size {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    display: inline-block;
+    float: none !important;
+}
+#controls_size.opened #small {
+    bottom:0px !important;
+}
+#controls_size.opened #medium {
+    bottom: 0px !important;}
+#controls_size #large,#controls_size #medium,#controls_size #small{
+color:#ffffff !important;
+border-radius: 0 11px 11px 0 !important;
+background-color:#027664;
+padding-left:4px;
+z-index: 1002 !important;
+}
+.center {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+	margin:auto;
+	left:0;
+	right:0;
+    width: 100%;
+    height: 15px;
+    bottom: -4px;
+	
+	background-image: url("../images/left-right2.png"),url("../images/left-right.png"), url("../images/center_header.png");
+	background-position:right top, left top, center top;
+	background-size:auto 15px,auto 15px,auto 15px;
+	background-repeat:no-repeat,no-repeat,repeat-x;
+}
+#controls_size #large, #controls_size #medium, #controls_size #small {
+color: #ffffff !important;
+    background-color: #027664;
+    padding-left: 4px;
+    z-index: 1002 !important;
+    position: fixed;
+    bottom: -58px;
+    left: -187px;
+    right: 0;
+    margin: auto;
+    background: transparent !important;
+    font-weight: 100;
+    font-size: 16px !important;
+}
+#controls_size.opened #large, #controls_size.opened #medium, #controls_size.opened #small
+{
+left:0 !important
+}
+#large {
+    font-size: 26px !important;
+    height: 100%;
+    line-height: 27px;
+    position: relative;
+    transform: scale(1.3);
+}
+a#small {
+    transform: scale(0.7);
+}
+.audio {
+    background-image: url(../images/sound-bg.png);
+    background-position: center;
+    background-size: 20px;
+    background-repeat: no-repeat;
+    height: 30px;
+    top: 10px;
+}
+
+#smgroup_audio_player {
+    display: none;
+    position: fixed;
+    bottom: 74px;
+    width: 100%;
+    padding: 0;
+    left: 0;
+    background-color: #38ab99;
+	height: 76px;
+}
+input#stop {
+    display: none;
+}
+div#audioPosition {
+    padding: 0 90px;
+	    top: 5px;
+}
+input#play {
+    position: absolute;
+    left: 16px;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 70.3px;
+    height: 51.6px;
+    background-image: url(../images/play.png);
+    background-size: 100%;
+    background-color: transparent;
+    border: 0;
+}
+input#play2 {
+    position: absolute;
+    left: 16px;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 70.3px;
+    height: 51.6px;
+    background-image: url(../images/play.png);
+    background-size: 100%;
+    background-color: transparent;
+    border: 0;
+}
+input#pause {
+    position: absolute;
+    left: 16px;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    width: 70.3px;
+    height: 51.6px;
+    background-image: url(../images/pause.png);
+    background-size: 100%;
+    background-color: transparent;
+    border: 0;
+	display:none
+}
+.audio_btn {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+button,input{
+outline:none
+}
+#audioTimer {
+position: absolute;
+    margin: auto;
+    width: 50px;
+    left: 115px;
+    top: 12px;
+    color: #f4e0b9;
+}
+#durationTimer {
+    position: absolute;
+    margin: auto;
+    width: 50px;
+    right: 91px;
+    top: 12px;
+    color: #f4e0b9;
+}
+.translate {
+    background-image: url(../images/trans-on.png);
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: 16px;
+}
+.translate.active {
+    background-image: url(../images/trans-off.png) !important;
+    background-position: right 5px center;
+    background-repeat: no-repeat;
+    background-size: 10px;
+}
+.sound .audio{
+	display:none;
+}
+.sound #smgroup_audio_player{
+	display:none
+}
+.tarjome .translate {
+    display: none;
+}
+/*///////////////////////////////////////////////////////////////////////////////////////*/
+/*///////////////////////////////////////////////////////////////////////////////////////*/
+/*Tarjome START//////////////////////////////////////////////////////////////////////////*/
+.dataTables_length label{
+	display:none
+}
+/*******amr***************/
+.dataTables_wrapper .dataTables_filter input {
+    margin-left: 0.5em;
+    width: 87%;
+    margin: 0 auto;
+    display: block;
+    border: 0;
+    height: 33px;
+	background-image: url(../images/search.png);
+	background-position: 15px;
+    background-repeat: no-repeat;
+    background-size: 22px;
+    padding: 0 10px;
+}
+div#data_table_filter {
+    width: 100%;
+    position: relative;
+    float: right;
+}
+.data_table.tarjome td,.data_table.tarjome tr{
+	/*background-color: #d7d7d7 !important;*/
+    border-bottom: 1px solid white;
+}
+div#data_table_paginate {
+    display: none;
+}
+table#data_table {
+    width: 87% !important;
+}
+table.dataTable tbody tr {
+  background-color: #e4e3e3;
+}
+table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd {
+  background-color: #cccccc;
+}
+table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td {
+  border-top: 0px solid #ddd;
+}
+.data_table.tarjome td, .data_table.tarjome tr {
+  border-bottom: 0 solid white;
+}
+table .title *
+{
+	background-color:#252525 !important;
+	color:#ffffff !important;
+}
+.dataTables_wrapper .dataTables_length, .dataTables_wrapper .dataTables_filter, .dataTables_wrapper .dataTables_info, .dataTables_wrapper .dataTables_processing, .dataTables_wrapper .dataTables_paginate {
+  direction: rtl;
+}
+.dataTables_wrapper .dataTables_info {
+  clear: both;
+  float: none;
+  padding-top: 0.755em;
+  text-align:center;
+}
+#data_table_filter{
+  background-color: #d7d7d7;
+  position: fixed !important;
+  top: 0px;
+  width: 100%;
+  z-index: 99999999;
+  padding:10px 0;
+}
+/* Tarjome START/////////////////////////////////////////////////////////////////////////*/
+/*///////////////////////////////////////////////////////////////////////////////////////*/
+/*///////////////////////////////////////////////////////////////////////////////////////*/
 
 
 
