--- a/www/css/main.css
+++ b/www/css/main.css
@@ -451,7 +451,9 @@ input#stop {
 }
 div#audioPosition {
     padding: 0 90px;
-	    top: 5px;
+	top: 5px;
+	width:auto;
+	z-index:999980;
 }
 input#play {
     position: absolute;
@@ -465,6 +467,8 @@ input#play {
     background-size: 100%;
     background-color: transparent;
     border: 0;
+	z-index:999999;
+	cursor:pointer;
 }
 input#play2 {
     position: absolute;
@@ -478,6 +482,8 @@ input#play2 {
     background-size: 100%;
     background-color: transparent;
     border: 0;
+	z-index:999999;
+	cursor:pointer;
 }
 input#pause {
     position: absolute;
@@ -491,14 +497,17 @@ input#pause {
     background-size: 100%;
     background-color: transparent;
     border: 0;
-	display:none
+	display:none;
+	z-index:999999;
+	cursor:pointer;
 }
 .audio_btn {
     position: absolute;
-    width: 100%;
+    /*width: 100%;*/
     height: 100%;
     top: 0;
     left: 0;
+	z-index:999998;
 }
 button,input{
 outline:none
@@ -606,7 +615,7 @@ table .title *
   position: fixed !important;
   top: 0px;
   width: 100%;
-  z-index: 99999999;
+  z-index: 97;
   padding:10px 0;
 }
 /* Tarjome START/////////////////////////////////////////////////////////////////////////*/
