--- a/www/css/main.css
+++ b/www/css/main.css
@@ -319,7 +319,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 /************amr***************/
 .dw_bottun {
-    height: 50px;
+    height: 74px;
     position: relative;
     top: 15px;
     margin: 0 auto;
@@ -360,7 +360,7 @@ text-align: center;
 	font-weight:bold;
 }
 #controls_size.opened {
-    bottom: 34px;
+    bottom: 32px;
     background-color: #38ab99;
     height: 40px;
 }
@@ -432,10 +432,21 @@ a#small {
     background-position: center;
     background-size: 20px;
     background-repeat: no-repeat;
+/*
     height: 30px;
-    top: 10px;
+    top: 24px;
+*/
+    height: 30px;
+    top: 0;
+	margin:24px 0px 20px 0px;
+	color:transparent;
 }
+.dw_bottun.fontsize,.dw_bottun.translate{
+	margin:24px 0px 20px 0px;
+	top:0px;
+    height: 30px;
 
+}
 #smgroup_audio_player {
     display: none;
     position: fixed;
@@ -450,15 +461,17 @@ input#stop {
     display: none;
 }
 div#audioPosition {
-    padding: 0 90px;
-	top: 5px;
-	width:auto;
-	z-index:999980;
+  box-sizing: border-box;
+  padding: 0 90px;
+  position: absolute;
+  top: 29px;
+  width: 100%;
+  z-index: 999980;
 }
 input#play {
     position: absolute;
     left: 16px;
-    top: 0;
+    top: 2px;
     bottom: 0;
     margin: auto;
     width: 70.3px;
@@ -469,11 +482,12 @@ input#play {
     border: 0;
 	z-index:999999;
 	cursor:pointer;
+    background-repeat: no-repeat;
 }
 input#play2 {
     position: absolute;
     left: 16px;
-    top: 0;
+    top: 2px;
     bottom: 0;
     margin: auto;
     width: 70.3px;
@@ -484,11 +498,12 @@ input#play2 {
     border: 0;
 	z-index:999999;
 	cursor:pointer;
+    background-repeat: no-repeat;
 }
 input#pause {
     position: absolute;
     left: 16px;
-    top: 0;
+    top: 2px;
     bottom: 0;
     margin: auto;
     width: 70.3px;
@@ -500,14 +515,15 @@ input#pause {
 	display:none;
 	z-index:999999;
 	cursor:pointer;
+    background-repeat: no-repeat;
 }
 .audio_btn {
-    position: absolute;
-    /*width: 100%;*/
-    height: 100%;
-    top: 0;
-    left: 0;
-	z-index:999998;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 90px;
+  z-index: 999998;
 }
 button,input{
 outline:none
