--- a/www/css/main.css
+++ b/www/css/main.css
@@ -247,7 +247,7 @@ input[type=range]:focus::-ms-fill-upper {
     height: 29px;
     width: 61px;
     position: absolute;
-    left: 20px;
+    left: 5px;
     margin: auto;
     cursor: pointer;
     bottom: 0;
@@ -268,7 +268,7 @@ input[type=range]:focus::-ms-fill-upper {
  color: white;
     float: right;
     font-size: 21px;
-    right: 20px;
+    right: 8px;
     font-weight: bold;
     height: 80px;
     line-height:80px;
@@ -355,18 +355,23 @@ text-align: center;
     background: none !important;
 	font-weight:bold;
 }
-#controls_size.opened {
-    bottom: 32px;
-    background-color: #38ab99;
-    height: 40px;
-}
 div#controls_size {
     position: relative;
     width: 100%;
     text-align: center;
     display: inline-block;
     float: none !important;
+	overflow:hidden;
+	margin:0;
+	padding:0;
+	height:0;
 }
+#controls_size.opened {
+    bottom: 35px;
+    background-color: #38ab99;
+    height: 40px;
+}
+
 #controls_size.opened #small {
     bottom:0px !important;
 }
@@ -463,7 +468,7 @@ input#stop {
 }
 div#audioPosition {
   box-sizing: border-box;
-  padding: 0 90px;
+  padding: 0 13px 0px 90px;
   position: absolute;
   top: 29px;
   width: 100%;
@@ -541,7 +546,7 @@ position: absolute;
     position: absolute;
     margin: auto;
     width: 50px;
-    right: 91px;
+    right: 14px;
     top: 12px;
     color: #f4e0b9;
 }
@@ -598,9 +603,7 @@ div#data_table_filter {
 div#data_table_paginate {
     display: none;
 }
-table#data_table {
-    width: 87% !important;
-}
+
 table.dataTable tbody tr {
   background-color: #e4e3e3;
 }
