--- a/www/css/main.css
+++ b/www/css/main.css
@@ -251,7 +251,7 @@ input[type=range]:focus::-ms-fill-upper {
     margin: auto;
     cursor: pointer;
     bottom: 0;
-    top: -2px;
+    top: -6px;
 }
 #header-text {
   position: absolute;
@@ -274,6 +274,7 @@ input[type=range]:focus::-ms-fill-upper {
     line-height:80px;
     padding: 0 8px;
     width: auto;
+    margin-top: -3px;
 }
 #header-text-3th{
   background: transparent url("../images/header-text-3th.png") no-repeat scroll right 0 / auto 86px;
