--- a/www/css/reset.css
+++ b/www/css/reset.css
@@ -33,9 +33,11 @@ div{
  position:relative;
 }
 h1, h2, h3, h4, h5, h6, th, td, caption { font-weight:normal; }
+/*
 input,textarea,select{
 	direction:rtl;
 }
+*/
 body {
 	text-align:right;
 }
