--- a/www/css/main.css
+++ b/www/css/main.css
@@ -32,6 +32,7 @@ html{
 	  display: inline-block;
 	  margin: 0 1px;
 	}
+
     .slidesjs-pagination li a {
       display: block;
       width: 13px;
@@ -65,6 +66,22 @@ html{
     .navbar {
       overflow: hidden
     }
+	
+    .slidesjs-pagination li a {
+      display: inline-block;
+      float: none;
+	  background-size: 13px auto;
+    }
+	.slidesjs-pagination {
+		margin: 6px 0 6px 0;
+		list-style: none;
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		z-index: 99999999;
+		width:100%;
+		text-align:center;
+	}
 /*//END SLIDER//////////////////////////////////////////////////////////////////////////////////////*/
 /*//////////////////////////////////////////////////////////////////////////////////////////////////*/
 /*//////////////////////////////////////////////////////////////////////////////////////////////////*/
@@ -228,6 +245,7 @@ input[type=range]:focus::-ms-fill-upper {
 
 
 
+.justify #main{line-height:200%;text-align:justify;direction:rtl;}
 .doa_text{line-height:200%;text-align:justify;direction:rtl;}
 .doa_titr{font-weight:bold;font-size:18px;}
 .arabic{font-family:Droid_Arabic_Kufi;padding:12px 0;}
@@ -238,6 +256,7 @@ input[type=range]:focus::-ms-fill-upper {
   margin: 0 -14px;
   padding: 12px 14px;
 }
+
 
 #header{
 	position:fixed;
@@ -736,7 +755,7 @@ table .title *
 .slide_navigator_link {
   font-size: 25px;
   font-weight: bold;
-  top: -6px;
+  top: -14px;/*-6px*/
   text-align:center;
   width:60%;
 }
