--- a/www/css/main.css
+++ b/www/css/main.css
@@ -777,7 +777,44 @@ table .title *
 /*///////////////////////////////////////////////////////////////////////////////////////*/
 /*///////////////////////////////////////////////////////////////////////////////////////*/
 
+/*///////////////////////////////////////////////////////////////////////////////////////*/
+/*///////////////////////////////////////////////////////////////////////////////////////*/
+/* Zirmenu START///////////////////////////////////////////////////////////////////////////*/
 
+ul.zirmenu {
+	background-color:transparent !important;
+}
+ul.zirmenu li {
+    float: right;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    background: url(../images/menu_line.png);
+    background-repeat: repeat-x;
+    background-position: center 19px;
+    background-size: 24px;
+	cursor:pointer;
+	background-color:transparent !important;
+	list-style-type: none !important;
+}
+ul.zirmenu li a {
+    color: black;
+    text-decoration: none !important;
+    background: url(../images/naghsh_menu_right.png),url(../images/naghsh_menu_left.png);
+    background-repeat: no-repeat;
+    background-position: right 5px top 15px,left 5px top 15px;
+    background-size: 24px;
+/*  padding-right: 40px;*/
+/*  padding-left: 40px;*/
+    background-color: #D7D7D7 !important;
+	margin: 0 auto;
+/*	display:block;*/
+/*	min-width:100px;*/
+}
+/* Zirmenu END///////////////////////////////////////////////////////////////////////////*/
+/*///////////////////////////////////////////////////////////////////////////////////////*/
+/*///////////////////////////////////////////////////////////////////////////////////////*/
 
 
 
