--- a/www/maps/js/leaflet.css
+++ b/www/maps/js/leaflet.css
@@ -506,3 +506,10 @@
 	background: #fff;
 	border: 1px solid #666;
 	}
+
+	
+	
+	
+.leaflet-control-layers-overlays label div {
+  min-width: 180px;
+}
