--- a/www/css/main.css
+++ b/www/css/main.css
@@ -264,11 +264,20 @@ input[type=range]:focus::-ms-fill-upper {
 	left:0;
 	height:80px;
 	width:100%;
-	background:#4a4a4a url("../images/top-bg.png") repeat scroll 0 0 / 85px auto;
+/*	background:#4a4a4a url("../images/top-bg.png") repeat scroll 0 0 / 85px auto;*/
 	z-index: 786;
+	background-color:#4a4a4a;
+	background-image:url("../images/top-bg.png");
+	background-repeat:repeat;
+	background-size:85px auto;
 }
 #back-btn{
-    background: transparent url("../images/back-btn.png") no-repeat scroll right 0 / auto 28px;
+/*  background: transparent url("../images/back-btn.png") no-repeat scroll right 0 / auto 28px;*/
+	background-color:transparent;
+	background-image:url("../images/back-btn.png");
+	background-repeat:no-repeat;
+	background-size:28px auto;
+	
     height: 29px;
     width: 61px;
     position: absolute;
