--- a/www/css/progress.bar.css
+++ b/www/css/progress.bar.css
@@ -42,11 +42,14 @@
 	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
 	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
 	box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
+/*
 	-webkit-transition: width .4s ease-in-out;
 	-moz-transition: width .4s ease-in-out;
 	-ms-transition: width .4s ease-in-out;
 	-o-transition: width .4s ease-in-out;
-	transition: width .4s ease-in-out;		
+	transition: width .4s ease-in-out;
+*/
+	max-width:auto;
 }
 
 /*---------------------------*/			
